automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
          {
            alert('I was clicked!')
          })
+     const input = document.querySelector('input')
+ 
+input.addEventListener('keydown', function(e) {
+  if (e.which === 71) {
+    return e.preventDefault()
+  }
+})
      
       //Responsive input bar
       const input = document.querySelector('input')
