--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       let divs = document.querySelectorAll('div')
       
       function bubble(e) {
-        e.stopPropagatin()console.log(this.firstChild.nodeValue.trim() + ' bubbled')
+        e.stopPropagatin()
+        console.log(this.firstChild.nodeValue.trim() + ' bubbled')
       }
       
       for (let i = 0; i < divs.length; i++) {
