automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       let divs = document.querySelectorAll('div')
       
       function bubble(e) {
-        e.stopPropagatin()
+        e.stopPropagation()
         console.log(this.firstChild.nodeValue.trim() + ' bubbled')
       }
       
